添加外链js文件

--- a/01git基础使用.html
+++ b/01git基础使用.html
@@ -12,3 +12,4 @@
     <p>https://github.com/hebob2008/GitUse/blob/e23076744cd1626746704f65a4005c20fb55aba7/01git%E5%9F%BA%E7%A1%80%E4%BD%BF%E7%94%A8.html</p>
 </body>
 </html>
+<script src="index.js"></script>
