--- a/01git基础使用.html
+++ b/01git基础使用.html
@@ -10,6 +10,7 @@
     <h1>git初体验</h1>
     <p>第一次提交代码</p>
     <p>https://github.com/hebob2008/GitUse/blob/e23076744cd1626746704f65a4005c20fb55aba7/01git%E5%9F%BA%E7%A1%80%E4%BD%BF%E7%94%A8.html</p>
+    <div>合并到feature1</div>
 </body>
 </html>
 <script src="index.js"></script>
