--- a/01git基础使用.html
+++ b/01git基础使用.html
@@ -13,6 +13,7 @@
     <div>合并到feature1</div>
     <div>使用小紫猫1</div>
     <div>feature1合并到2024</div>
+    <div>5.16使用commit提交</div>
 </body>
 </html>
 <script src="index.js"></script>
